package com.directi.training.srp.exercise_refactored;

import java.util.Arrays;
import java.util.List;

public class CarManager
{
    public final CarRepository repository;

    public CarManager(CarRepository repository) {
        this.repository = repository;
    }

    public String getCarsNames()
    {
        List<Car> cars = repository.findAll();
        StringBuilder sb = new StringBuilder();
        for (Car car : cars) {
            sb.append(car.getBrand());
            sb.append(" ");
            sb.append(car.getModel());
            sb.append(", ");
        }
        return sb.substring(0, sb.length() - 2);
    }

    public Car getBestCar()
    {
        List<Car> cars = repository.findAll();
        Car bestCar = null;
        for (Car car : cars) {
            if (bestCar == null || car.getModel().compareTo(bestCar.getModel()) > 0) {
                bestCar = car;
            }
        }
        return bestCar;
    }
}
